Подсчёт собственного капитала

--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div id="equityAmount" class="well well-sm"><h4>Собственный капитал:</h4></div>
+                <div id="equityAmount" class="well well-sm"></div>
             </div>
         </div>
         <div class="row">
