Удаление активов и обязательств

--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -112,14 +112,14 @@
                                 <th>Название актива</th>
                                 <th>Категория актива</th>
                                 <th>Стоимость актива</th>
+                                <th></th>
                             </tr>
                             </thead>
-                            <tbody>
-
-                            </tbody>
+                            <tbody></tbody>
                             <tfoot>
                             <tr>
                                 <th>Суммарные активы:</th>
+                                <th></th>
                                 <th></th>
                                 <th></th>
                             </tr>
@@ -145,14 +145,14 @@
                                 <th>Название долга</th>
                                 <th>Категория долга</th>
                                 <th>Остаток</th>
+                                <th></th>
                             </tr>
                             </thead>
-                            <tbody>
-
-                            </tbody>
+                            <tbody></tbody>
                             <tfoot>
                             <tr>
                                 <th>Общие обязательства:</th>
+                                <th></th>
                                 <th></th>
                                 <th></th>
                             </tr>
